--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>Desenvolvimento Mobile</title>
+    <title>Aula Projeto Integrador</title>
 </head>
 <body>
-    <h3>Pagina Inicial de Desenolvimento Movel</h3>
+    <h3></h3>
 </body>
 
 </html>
